--- a/content/reference/evaluation.adoc
+++ b/content/reference/evaluation.adoc
@@ -37,7 +37,7 @@ If a Symbol has metadata, it may be used by the compiler, but will not be part o
 
 Vectors, Sets and Maps yield vectors and (hash) sets and maps whose contents are the _evaluated values_ of the objects they contain. Vector elements are evaluated left to right, Sets and Maps are evaluated in an undefined order. The same is true of metadata maps. If the vector or map has metadata, the _evaluated_ metadata map will become the metadata of the resulting value.
 
-[source,clojure]
+[source,clojure-repl]
 ----
 user=> (def x 1)
 user=> (def y 2)
