page type for eventlist

--- a/content/community/events.adoc
+++ b/content/community/events.adoc
@@ -1,7 +1,7 @@
 = Events
 Alex Miller
 2015-11-30
-:jbake-type: page
+:jbake-type: eventlist
 :toc: macro
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
