make news page use the news template

--- a/content/news/news.adoc
+++ b/content/news/news.adoc
@@ -1,7 +1,7 @@
 = News 
 Alex Miller
 2015-11-25
-:jbake-type: page
+:jbake-type: news
 :toc: macro
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
