Added Point Slope

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -132,6 +132,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://paygarden.com[PayGarden]
 * http://www.pennymacusa.com[PennyMac]
 * http://www.pivotal.io/[Pivotal Labs]
+* http://www.pointslope.com[Point Slope]
 * http://dmarc.postmarkapp.com/[Postmark]
 * https://precursorapp.com/[Precursor]
 * http://www.print.io/[Print.IO]
