make event pages event page type

--- a/content/events/2015/clojurex.adoc
+++ b/content/events/2015/clojurex.adoc
@@ -1,7 +1,7 @@
 = Clojure eXchange
 Skills Matter
 2015-12-03
-:jbake-type: post
+:jbake-type: event
 :jbake-edition: 2015
 :jbake-link: https://skillsmatter.com/conferences/6861-clojure-exchange-2015
 :jbake-location: London, UK
