--- a/content/events/2016/clojured.adoc
+++ b/content/events/2016/clojured.adoc
@@ -1,7 +1,7 @@
 = :clojureD
 clojureD
 2016-02-20
-:jbake-type: post
+:jbake-type: event
 :jbake-edition: 2016
 :jbake-link: http://www.clojured.de/
 :jbake-location: Berlin, Germany
