--- a/content/events/2016/clojureremote.adoc
+++ b/content/events/2016/clojureremote.adoc
@@ -1,7 +1,7 @@
 = Clojure Remote
 Homegrown Labs
 2016-02-11
-:jbake-type: post
+:jbake-type: event
 :jbake-edition: 2016
 :jbake-link: http://clojureremote.com/
 :jbake-location: Online
