--- a/content/about/clojureclr.adoc
+++ b/content/about/clojureclr.adoc
@@ -12,5 +12,5 @@ This project is a native implementation of Clojure on the Common Language Runtim
 
 ClojureCLR is programmed in C# (and Clojure itself) and makes use of Microsoft's Dynamic Language Runtime (DLR).
 
-=== https://github.com/clojure/clojure-clr[ClojureCLR Home] 
-=== https://github.com/clojure/clojure-clr/wiki/Getting-binaries[Downloading Binaries] 
+* https://github.com/clojure/clojure-clr[ClojureCLR Home] 
+* https://github.com/clojure/clojure-clr/wiki/Getting-binaries[Downloading Binaries] 
