--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -20,6 +20,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.appsflyer.com/[AppsFlyer]
 * http://www.appsnsites.com/[Appsnsites]
 * http://ardoq.com/[Ardoq]
+* http://auspost.com.au/[Australia Post]
 * http://www.aviso.io/[Aviso]
 * http://beanstalkapp.com/[Beanstalk]
 * http://BearyInnovative.com[BearyInnovative]
