update companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -116,6 +116,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://www.mastodonc.com/[Mastodon C]
 * https://mazira.com/[Mazira]
 * http://meewee.com[MeeWee]
+* http://www.metail.com[Metail]
 * http://metosin.fi/[Metosin]
 * http://www.mixrad.io/[MixRadio]
 * http://www.modelogiq.com/[modelogiq]
@@ -155,6 +156,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * https://www.redpineapplemedia.com/[Red Pineapple Media]
 * http://rentpath.com/[RentPath]
 * http://rjmetrics.com/[RJMetrics]
+* http://rocketfuel.com/[Rocket Fuel]
 * http://www.roomkey.com/[RoomKey] - see http://cognitect.com/consulting/case-studies/roomkey[case study]
 * http://roximity.com/[ROXIMITY]
 * http://www.salesforce.com/[Salesforce]
